# QDmi

./: CMakeLists.txt  Privacy_policy.txt  QDmi - Kopie.pro  QDmi-qt5.pro  QDmi-qt6.pro  QDmi.json  QDmi.pro  QDmi.pro.user_win  README.md  TestTelegrammSep.py  TestTelegrammSepTextmeldungenDbLh.py  alphanumericinput.cpp  alphanumericinput.h  compile_commands.json  db.h  dmibutton.cpp  dmibutton.h  dmilabel.cpp  dmilabel.h  era.h  etcstextwidget.cpp  etcstextwidget.h  fonts.qrc  gauge.cpp  gauge.h  icons.qrc  lzb.cpp  lzb.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manometer.cpp  manometer.h  mtd.cpp  mtd.h  planningarea.cpp  planningarea.h  power.cpp  power.h  (+19 more)
Archiv/: etcsTextLabel.cpp_obsolet  etcsTextLabel.h_obsolet  mainwindow - Kopie.cpp
SEP/: QDmi.json
android/: .gitignore
android/res/values/: .gitignore
docu/: Dokumentation_QDmi.odt
pro_user_trash/: QDmi-qt5.pro  QDmi.pro.user_bak_21-07-25
